# wlblur

./: .gitignore  LICENSE  README.md  ROADMAP.md  meson.build  meson_options.txt  target-repomap.md  test-config.toml
.github/workflows/: wiki-sync.yml
backlog/: config.yml
backlog/milestones/: m-3.md  m-4.md
backlog/tasks/: task-0.1.md  task-0.2.md  task-0.3.md  task-0.7.md  task-0.8.md  task-1.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md
docs/: configuration-guide.md
docs/architecture/: 00-overview.md  01-libwlblur.md  02-wlblurd.md
docs/decisions/: 001-why-external-daemon.md  002-dma-buf-vs-alternatives.md  003-kawase-algorithm-choice.md  004-ipc-protocol-design.md  005-scenefx-extraction.md  006-daemon-configuration-with-presets.md
docs/examples/: wlblur-config.toml
docs/investigation/hyprland-investigation/: daemon-translation-feasibility.md
docs/post-investigation/: comprehensive-synthesis1.md
docs/post-milestone2-discussion/: config-blur-selector.md  milestone2-report.md  new-decision-milestone2.5.md  notes-for-later.md
docs/pre-investigation/: blur-compositor.md
examples/: blur-dmabuf-example.c  blur-png.c  ipc-client-example.c  meson.build  protocol-demo.c  test-dmabuf.c
integrations/niri/: README.md
integrations/scroll/: README.md
libwlblur/: meson.build
libwlblur/include/wlblur/: blur_context.h  blur_params.h  dmabuf.h  wlblur.h
libwlblur/private/: internal.h
libwlblur/shaders/: README.md  blur_finish.frag.glsl  common.glsl  kawase_downsample.frag.glsl  kawase_upsample.frag.glsl  vibrancy.frag.glsl
libwlblur/src/: blur_context.c  blur_kawase.c  blur_params.c  dmabuf.c  egl_helpers.c  framebuffer.c  shaders.c  utils.c
tests/: meson.build  test_dmabuf.c  test_ipc.c  test_kawase.c  test_params.c
wiki/: Architecture-Configuration-System.md  Architecture-Daemon-Approach-Rationale.md  Architecture-Daemon-Architecture.md  Architecture-Decisions-ADR-001-External-Daemon.md  Architecture-Decisions-ADR-002-DMA-BUF.md  Architecture-Decisions-ADR-003-Kawase-Algorithm.md  Architecture-Decisions-ADR-004-IPC-Protocol.md  Architecture-Decisions-ADR-005-SceneFX-Extraction.md  Architecture-Decisions-ADR-006-Daemon-Config.md  Architecture-Decisions-Why-IPC-Is-Better.md  Architecture-System-Overview.md  Architecture-libwlblur-Internals.md  Background-Early-Explorations.md  Background-ScrollWM-Motivation.md  Development-Building-from-Source.md  Development-Contributing.md  Development-Release-Process.md  For-Compositor-Developers-API-Reference.md  For-Compositor-Developers-Integration-Checklist.md  For-Compositor-Developers-Integration-Overview.md  For-Compositor-Developers-Library-API.md  For-Compositor-Developers-Performance-Considerations.md  Getting-Started-FAQ.md  Getting-Started-Installation.md  Getting-Started-Quick-Start.md  Getting-Started-What-is-wlblur.md  Home.md  Milestones-Overview.md  Milestones-m-1-libwlblur.md  Milestones-m-3-Complete.md  Milestones-m-4-ScrollWM-Integration.md  Roadmap-Current-Status.md  Roadmap-Material-System-Design.md  Roadmap-Next-Steps.md  Roadmap-Project-Roadmap.md  Roadmap-macOS-Parity-Vision.md  Technical-Investigation-Hyprland-Architecture.md  Technical-Investigation-Hyprland-Damage-Tracking.md  Technical-Investigation-Hyprland-Overview.md  Technical-Investigation-Overview.md  (+13 more)
wiki/Architecture-Decisions/: ADR-001-External-Daemon.md  ADR-002-DMA-BUF.md  ADR-003-Kawase-Algorithm.md  ADR-004-IPC-Protocol.md  ADR-005-SceneFX-Extraction.md  ADR-006-Daemon-Config.md  Overview.md
wiki/Development/: Code-Style.md  Contributing.md  Release-Process.md  Testing.md
wiki/For-Compositor-Developers/: Example-Integration.md  Integration-Overview.md  Performance-Considerations.md
wiki/Getting-Started/: FAQ.md  Installation.md  Quick-Start.md  What-is-wlblur.md
wiki/Milestones/: Overview.md  m-0-Documentation.md  m-2-Daemon.md  m-3-Configuration.md  m-5-Future.md
wiki/Roadmap/: Current-Status.md  Hyprland-Parity-Plan.md  Next-Steps.md
wiki/Technical-Investigation/: Hyprland-Blur-Algorithm.md  Hyprland-Overview.md  Hyprland-Performance.md  Overview.md  Parameter-Comparison.md  SceneFX-Architecture.md  SceneFX-Blur-Implementation.md  SceneFX-Summary.md  Wayfire-Algorithm-Analysis.md  Wayfire-Overview.md
wiki/User-Guide/: Configuration.md  Hot-Reload.md  Presets.md  Troubleshooting.md
wlblurd/: meson.build
wlblurd/include/: config.h  protocol.h
wlblurd/src/: blur_node.c  buffer_registry.c  client.c  config.c  ipc.c  ipc_protocol.c  main.c  presets.c  reload.c
wlblurd/systemd/: wlblur.service
